# lidar-point-cloud

./: .gitignore  README.md  SETUP.md  ScreenCamera_2026-06-03-10-54-55.json  ScreenCamera_2026-06-03-10-55-49.json  ScreenCamera_2026-06-03-11-15-36.json  bunny_keypoints.ply  feature_only.py  loader.py  requirements.txt  trial.py
.venv_win/: pyvenv.cfg
.venv_win/Scripts/: activate  activate.bat
dragon_backdrop/: README  carvers.conf  dragonClearSpace2_0.ply  dragonToes3_0.ply
keypoint_outputs/: bun000_keypoints.ply  bun045_keypoints.ply  bun090_keypoints.ply  bun270_keypoints.ply  bun315_keypoints.ply
pcl_tools/harris_3d/: CMakeLists.txt  main.cpp
pcl_tools/shot/: CMakeLists.txt  main.cpp
source_codes/Go-ICP-master/Go-ICP-master/: CMakeLists.txt  ConfigMap.cpp  ConfigMap.hpp  GoICP  README.md  StringTokenizer.cpp  StringTokenizer.hpp  matrix.cpp  matrix.h  output.txt
source_codes/Go-ICP-master/Go-ICP-master/demo/: output.txt
source_codes/sift3d/: CMakeCache.txt  CMakeLists.txt  sift.cpp
task1/: ScreenCamera_2026-06-01-14-33-39.json  batch.py  config.py  final.ply  helper.py  main.cpp  main.py  test_fpfh.py  test_harris.py  viewer.py
task1/data/: bun.conf~  chin.ply  ear_back.ply  top2.ply
task1/descriptor/: correspondence.py  correspondence_000_045.npy  correspondence_045_090.npy  correspondence_090_180.npy  correspondence_180_270.npy  correspondence_270_315.npy
task1/documentation/: new.md  report.md
task1/icp/: icp.py  robusticp.py
task1/keypoints/: sift_save.py
task1/outputs/: final.ply
task1/preprocessing/: feature_pipeline.py  fpfh.py  (+5 more)
(+675 files in other folders)
